--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <title>Alex's Programming Portfolio</title>
     </head>
     <body>
+        <table width="1000px"></table>
         <td><img src="Banner.jpeg"></td>
-        <table width="1000px">
+        
 
    <td><a href="aboutme.html"><img src="AboutMe.png"></a></td>
   
