--- a/javascript.html
+++ b/javascript.html
@@ -7,9 +7,9 @@
         <td><img src="Banner.jpeg"></td>
         <table width="1000px">
 
-   <td><a href="file:///Users/alexlancellotti/Desktop/comp%20sci%20folder%20for%20class/aboutme.html"><img src="AboutMe.png"></a></td>
+   <td><a href="aboutme.html"><img src="AboutMe.png"></a></td>
   
-   <td><a href='file:///Users/alexlancellotti/Desktop/comp%20sci%20folder%20for%20class/index.html'><img src="Home.png"></a></td>
+   <td><a href="index.html"><img src="Home.png"></a></td>
       
-     <td><a href="file:///Users/alexlancellotti/Desktop/comp%20sci%20folder%20for%20class/javascript.html"><img src="Javascripts.png"></a></td> 
-   </a>
+  <td><a href="javascript.html"><img src="Javascripts.png"></a></td> 
+  </table>
