--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
     </h1>
     <h2>Click Below to Be redirected back to home!</h2>
     <h2> <ul>
-        <li><a href='file:///Users/alexlancellotti/Desktop/comp%20sci%20folder%20for%20class/index.html'>Home</a></li>
+        <li><a href="index.html">Home</a></li>
     </ul></h2>
 </p>
     
