--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
         <title>Alex's Programming Portfolio</title>
     </head>
     <body>
-        <table width="1000px"></table>
         <td><img src="Banner.jpeg"></td>
-        
+        <table width="1000px">
 
    <td><a href="aboutme.html"><img src="AboutMe.png"></a></td>
   
    <td><a href="index.html"><img src="Home.png"></a></td>
       
-     <td><a href="javascript.html"><img src="Javascripts.png"></a></td> 
-   </a>
-
-</td>
-    </table width="800px">
+  <td><a href="javascript.html"><img src="Javascripts.png"></a></td> 
+  </table>
+  
 <h1> Hello Welcome to My Page!
     <p> So glad you were able to find your way here, on this website you can get to know me very well! I've created this website in hopes that people can learn a thing or two about me. If you click the 'about me' tab, you will be directed to a page that gives you some interesting information!
     <h2> On this website you'll get to learn
