--- a/javascript.html
+++ b/javascript.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <td><img src="Banner.jpeg"></td>
-        <h1>Welcome to my page!</h1>
+        <h1>This is my java script page</h1>
         <table width="1000px">
 
    <td><a href="aboutme.html"><img src="AboutMe.png"></a></td>
